feat: simplify AI stream run control